recipe: add package name on context

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -1,8 +1,9 @@
 context:
+  name: lua-language-server
   version: 3.16.4
 
 package:
-  name: lua-language-server
+  name: ${{ name }}
   version: ${{ version }}
 
 source:
